feat: enhance member searching, application and invitation handling
