# docs/api/swagger.yaml
@@ -10,15 +10,28 @@ definitions:
       nickname:
         description: 申请者昵称
         type: string
-      project_id:
-        description: 所属项目 ID
-        type: integer
+      project:
+        allOf:
+        - $ref: '#/definitions/dtos.InnerProject'
+        description: 所属项目的基本信息
       role:
         description: 申请的角色，使用位掩码表示
         type: integer
       status:
         description: 申请状态，0 pending, 1 accepted, 2 rejected
         type: integer
+    type: object
+  dtos.ApplyProjectRequest:
+    properties:
+      apply_role:
+        description: 申请加入的职位 (使用 uint 存储位掩码)
+        type: integer
+      project_id:
+        description: 项目 ID
+        type: integer
+    required:
+    - apply_role
+    - project_id
     type: object
   dtos.CreateProjectRequest:
     properties:
@@ -41,6 +54,25 @@ definitions:
     - title
     - workset_id
     type: object
+  dtos.InnerProject:
+    properties:
+      project_id:
+        description: 所属项目 ID
+        type: integer
+      project_title:
+        description: 项目标题
+        type: string
+      status:
+        allOf:
+        - $ref: '#/definitions/dtos.ProjectOverallStatus'
+        description: 项目状态，使用位
+      workset_id:
+        description: 所属作品
+        type: integer
+      workset_index:
+        description: 作品集内的序号
+        type: integer
+    type: object
   dtos.InvitationBasic:
     properties:
       id:
@@ -50,7 +82,7 @@ definitions:
         description: 邀请的角色，使用位掩码表示
         type: integer
       invitee_id:
-        description: 被邀请者 ID
+        description: InviterNickname string `json:"inviter_nickname"` // 邀请者昵称
         type: integer
       invitee_nickname:
         description: 被邀请者昵称
@@ -58,12 +90,10 @@ definitions:
       inviter_id:
         description: 邀请者 ID
         type: integer
-      inviter_nickname:
-        description: 邀请者昵称
-        type: string
-      project_id:
-        description: 所属项目 ID
-        type: integer
+      project:
+        allOf:
+        - $ref: '#/definitions/dtos.InnerProject'
+        description: 所属项目的基本信息
       status:
         description: 邀请状态，0 pending, 1 accepted, 2 rejected
         type: integer
@@ -128,12 +158,18 @@ definitions:
       is_published:
         description: 是否已发布
         type: boolean
+      joined_time:
+        description: 加入的时间
+        type: string
       legacy_id:
         description: 历史遗留序号
         type: integer
       moetran_id:
         description: 龙译 ID
         type: string
+      principal_id:
+        description: 项目的负责人 ID
+        type: integer
       role:
         description: 成员在项目中的角色，使用掩码计算多重身份
         type: integer
@@ -393,9 +429,73 @@ info:
   title: PoplarGrid 核心 API 服务器
   version: "1.0"
 paths:
+  /applications:
+    get:
+      description: 根据分页参数获取用户的申请列表，支持分页和排序。当列表为空
+      parameters:
+      - description: 页码，默认值为 1
+        in: query
+        name: page_serial
+        type: integer
+      - description: 每页数量，默认值为 10
+        in: query
+        name: page_size
+        type: integer
+      - description: 申请类型，0：发出的申请，1：收到的申请
+        in: query
+        name: kind
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dtos.ApplicationBasic'
+            type: array
+        "400":
+          description: 无效的请求参数
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: 获取当前用户的申请（发出或收到）列表，支持分页
+      tags:
+      - application
+    post:
+      description: 创建一个新的申请，申请加入项目
+      parameters:
+      - description: 申请参数
+        in: body
+        name: body_params
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.ApplyProjectRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 申请创建成功
+          schema:
+            $ref: '#/definitions/handlers.SuccessResponse'
+        "400":
+          description: 无效的请求参数
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: 创建一个新的申请
+      tags:
+      - application
   /invitations:
     get:
-      description: 根据分页参数获取用户发送的邀请列表，支持分页和排序。当列表为空时，会返回 null 而不是空数组。
+      description: 根据分页参数获取用户的邀请列表，支持分页和排序。当列表为空时，会返回 null 而不是空数组。
       parameters:
       - description: 页码，默认值为 1
         in: query
@@ -477,10 +577,13 @@ paths:
         in: query
         name: status
         type: integer
-      - description: 项目所属的作品集 ID
+      - description: 用户 ID，默认不筛选用户
+        in: query
+        name: user_id
+        type: integer
+      - description: 项目所属的作品集 ID，默认不筛选作品集
         in: query
         name: workset_id
-        required: true
         type: integer
       produces:
       - application/json
@@ -691,7 +794,15 @@ paths:
         in: query
         name: page_size
         type: integer
-      - description: 所属汉化组 ID，必填
+      - description: 要模糊搜索的成员（部分）昵称
+        in: query
+        name: member_nickname
+        type: string
+      - description: 要搜索的成员的 QQ 号，使用 interger 加速查找
+        in: query
+        name: member_qq
+        type: integer
+      - description: 所属汉化组 ID
         in: path
         name: id
         required: true
@@ -716,9 +827,9 @@ paths:
       summary: 获取汉化组成员列表分页
       tags:
       - team
-  /users/{id}/applications_sent:
+  /users/{id}/applications:
     get:
-      description: 根据分页参数获取用户发送的申请列表，支持分页和排序\n当列表为空时，会返回 null 而不是空数组\n如果 id 不是当前登录的用户
+      description: 根据分页参数获取用户的申请列表，支持分页和排序\n当列表为空时，会返回 null 而不是空数组\n如果 id 不是当前登录的用户
         ID，则返回 400 错误
       parameters:
       - description: 页码，默认值为 1
@@ -729,11 +840,16 @@ paths:
         in: query
         name: page_size
         type: integer
-      - description: 用户 ID，必填
+      - description: 用户 ID
         in: path
         name: id
         required: true
         type: integer
+      - description: 申请类型，0：发送的申请，1：收到的申请
+        in: query
+        name: kind
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -751,7 +867,7 @@ paths:
           description: 服务器内部错误
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-      summary: 获取当前用户的申请列表，支持分页
+      summary: 获取当前用户的申请（发出或收到）列表，支持分页
       tags:
       - application
   /users/{id}/detail:
@@ -783,7 +899,7 @@ paths:
       - user
   /users/{id}/invitations:
     get:
-      description: 根据分页参数获取用户发送的邀请列表，支持分页和排序\n当列表为空时，会返回 null 而不是空数组\n如果 id 不是当前登录的用户
+      description: 根据分页参数获取用户的邀请列表，支持分页和排序\n当列表为空时，会返回 null 而不是空数组\n如果 id 不是当前登录的用户
         ID，则返回 400 错误
       parameters:
       - description: 页码，默认值为 1
@@ -794,7 +910,7 @@ paths:
         in: query
         name: page_size
         type: integer
-      - description: 用户 ID，必填
+      - description: 用户 ID
         in: path
         name: id
         required: true
@@ -826,7 +942,7 @@ paths:
       - invitation
   /users/{id}/projects:
     get:
-      description: 获取指定用户参与的所有项目列表，支持分页和排序
+      description: 获取指定用户参与的所有项目列表，支持分页
       parameters:
       - description: 页码，默认值为 1
         in: query
@@ -898,7 +1014,7 @@ paths:
       summary: 获取当前用户参与的汉化组列表
       tags:
       - user
-  /workset/list:
+  /worksets:
     get:
       description: 注意当列表为空，会返回 null 而不是空数组
       parameters:
@@ -935,13 +1051,13 @@ paths:
       summary: 获取特定汉化组的工作集列表分页，按 ID 倒序
       tags:
       - workset
-  /workset/stats:
+  /worksets/{id}/stats:
     get:
       description: 获取所有项目的统计信息，包括总数、翻译、校对、嵌字，审核、发布对应数量等
       parameters:
-      - description: 作品集 ID，必填
-        in: query
-        name: workset_id
+      - description: 作品集 ID
+        in: path
+        name: id
         required: true
         type: integer
       produces:
