# internal/apiserver/handlers/project_handler.go
@@ -22,11 +22,6 @@ func RouteProjectHandler(root *mvc.Application) {
 		Handle(projectProcHandler).
 		Handle(projectLaborHandler)
 
-	// // 注册 handler
-	// projectParty.Handle(projectHandler)
-	// projectParty.Handle(projectProcHandler)
-	// projectParty.Handle(projectLaborHandler)
-
 	// 注册路由与方法间的映射（静态安全）
 	projectParty.Router.Get("", projectHandler.ProjectListPage)
 	projectParty.Router.Get("/{id:uint}", projectHandler.ProjectDetail)
@@ -46,14 +41,14 @@ type ProjectHandler struct {
 }
 
 // ProjectListPage godoc
-// @Summary     获取项目列表分页 (按作品集筛选)
+// @Summary     获取项目列表分页
 // @Description 根据作品集 ID 获取项目列表，支持分页、排序和状态筛选。当列表为空时，会返回 null 而不是空数组。
 // @Param       page_serial query integer false "页码，默认值为 1"
 // @Param       page_size query integer false "每页数量，默认值为 10"
-// @Param       sort query integer false "排序方式，0：按 ID 倒序，1：按 updated_at 倒序"
+// @Param       sort query integer false "排序方式，0：按 ID 倒序，1：按 updated_at 倒序，默认按 ID 倒序"
 // @Param       status query integer false "项目状态（位掩码），用于复合查询，默认不筛选查询"
 // @Param       user_id query integer false "用户 ID，默认不筛选用户"
-// @Param       workset_id query integer true "项目所属的作品集 ID"
+// @Param       workset_id query integer false "项目所属的作品集 ID，默认不筛选作品集"
 // @Tags        project
 // @Produce     json
 // @Success     200 {object} []dtos.ProjectBasic
@@ -69,8 +64,10 @@ func (h *ProjectHandler) ProjectListPage(ctx iris.Context) {
 	// 注意默认为 PROJECT_STATUS_ALL，表示不筛选状态
 	status := ctx.URLParamInt32Default("status", dtos.PROJECT_STATUS_ALL)
 
+	// 注意默认为 0，代表不筛选 workset
 	worksetId := ctx.URLParamIntDefault("workset_id", 0)
 
+	// 注意默认为 0，代表不筛选 user
 	userId := ctx.URLParamIntDefault("user_id", 0)
 
 	// 根据参数调用服务层获取数据
@@ -88,46 +85,6 @@ func (h *ProjectHandler) ProjectListPage(ctx iris.Context) {
 	ctx.JSON(projects)
 
 }
-
-// // ProjectListPageByUserId godoc
-// // @Summary 	获取用户参与的项目列表分页，默认按照 ID 倒序排列
-// // @Description 注意当列表为空，会返回 null 而不是空数组
-// // @Param 		page_serial query integer false "页码，默认值为 1"
-// // @Param 		page_size query integer false "每页数量，默认值为 10"
-// // @Param 		user_id query integer true "用户 ID"
-// // @Tags 		project
-// // @Produce 	json
-// // @Success	 	200 {object} []dtos.MyProjectBasic
-// // @Failure     400 {object} ErrorResponse "无效的请求参数"
-// // @Failure     500 {object} ErrorResponse "服务器内部错误"
-// // @Router 		/projects/list_by_user [get]
-// func (h *ProjectHandler) ProjectListPageByUserId(ctx iris.Context) {
-// 	pageSerial := ctx.URLParamInt32Default("page_serial", 1)
-
-// 	pageSize := ctx.URLParamInt32Default("page_size", 10)
-
-// 	userId, err := ctx.URLParamInt("user_id")
-// 	if err != nil || userId <= 0 {
-// 		ctx.StatusCode(iris.StatusBadRequest)
-// 		ctx.JSON(ErrorResponse{
-// 			Error: "user_id 必须是一个明确给出的正整数",
-// 		})
-// 		return
-// 	}
-
-// 	// 调用服务层获取数据
-// 	projects, err := h.ProjectService.GetBasicPageByUserId(uint(userId), int(pageSerial), int(pageSize))
-// 	if err != nil {
-// 		ctx.StatusCode(iris.StatusInternalServerError)
-// 		ctx.JSON(ErrorResponse{
-// 			Error:  "获取用户参与的项目列表失败",
-// 			Detail: err.Error(),
-// 		})
-// 		return
-// 	}
-
-// 	ctx.JSON(projects)
-// }
 
 // ProjectDetail godoc
 // @Summary 	获取项目详情
